[package]
name = "deepsize_derive2"
version = "0.1.0"
authors = ["Aeledfyr <aeledfyr@gmail.com>", "Nathan <n@push0.dev>"]
license = "MIT"
description = "A crate for measuring the total size of object on the stack and heap"
repository = "https://github.com/nhtyy/deepsize2/"
include = ["Cargo.toml", "src/**/*.rs", "../LICENSE", "../README.md"]
readme = "../README.md"
edition = "2021"
keywords = ["size", "stack", "heap", "macro"]
categories = ["development-tools::profiling", "memory-management"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
